# fastapi-course

./: README.md  database.py  main.py  pyproject.toml
fastapi-course/app/: database.py  main.py  models.py  oauth2.py  schemas.py
fastapi-course/app/routers/: auth.py  post.py  user.py
