[tool.poetry]
name = "fastapi-course"
version = "0.1.0"
description = ""
authors = ["rich leblanc <rich.leblanc1@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
colorlog = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
